--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
     </div>
   </div>
 
+  <div class="mb-4">
+    <a href="arthro1.html">Το πρώτο μου άρθρο</a>
+    <a href="arthro2.html">Το δεύτερο μου άρθρο</a>
+  </div>
+
   <div class="row mb-2">
     <div class="col-md-6">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -222,7 +227,7 @@
 </main><!-- /.container -->
 
 <footer class="blog-footer">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <!-- <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p> -->
   <p>
     <a href="#">Back to top</a>
   </p>
