--- a/arthro1.html
+++ b/arthro1.html
@@ -89,7 +89,7 @@
           <!-- εδώ μπαίνει ο τίτλος γκει -->
         <h2 class="blog-post-title">Νομίζω πως ο σκύλος μου είναι γκέι</h2>
         <!-- ημερομηνία -->
-        <p class="blog-post-meta">30 Ιουνίου, 2020 από τον <a href="#">Ντίνο</a></p>
+        <p class="blog-post-meta">30 Ιουνίου, 2020 από τον <a href="/">Ντίνο</a></p>
 
         <p> 
             Τον είδα χθές με έναν άλλο σκύλο, νομίζω έκαναν έρωτα. 
