--- a/arthro2.html
+++ b/arthro2.html
@@ -89,7 +89,7 @@
           <!-- εδώ μπαίνει ο τίτλος γκει -->
         <h2 class="blog-post-title">Ο γείτονας μου είναι πέδαρος</h2>
         <!-- ημερομηνία -->
-        <p class="blog-post-meta">30 Ιουνίου, 2020 από τον <a href="#">Ντίνο</a></p>
+        <p class="blog-post-meta">30 Ιουνίου, 2020 από τον <a href="/">Ντίνο</a></p>
 
         <p> 
             Τον βλέπω κρυφά να κάνει μπάνιο.
