--- a/arthro2.html
+++ b/arthro2.html
@@ -33,6 +33,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="blog.css" rel="stylesheet">
+    <script data-ad-client="ca-pub-3920287252264423" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <div class="container">
@@ -42,7 +43,7 @@
         <!-- <a class="text-muted" href="#">Subscribe</a> -->
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">ΡΕΠΟΡΤΕΡ10</a>
+        <a class="blog-header-logo text-dark" href="/">ΡΕΠΟΡΤΕΡ10</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="text-muted" href="#" aria-label="Search">
