--- a/kosmos.html
+++ b/kosmos.html
@@ -78,7 +78,7 @@
 
   <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
     <div class="col-md-6 px-0">
-      <h1 class="display-4 font-italic">Έγκυρη και Έγκαιρη Ενημέρωση</h1>
+      <h1 class="display-4 font-italic">Κόσμος</h1>
       <!-- <p class="lead my-3">Coming Soon!!!</p> -->
       <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p> -->
     </div>
@@ -89,59 +89,38 @@
     <a href="arthro2.html">Το δεύτερο μου άρθρο</a>
   </div> -->
 
-  <div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary">Κόσμος</strong>
-          <h3 class="mb-0">Featured post</h3>
-          <div class="mb-1 text-muted">Ιουν 30</div>
-          <p class="card-text mb-auto">Μπόρις Τζόνσον: New deal 5 δισ. λιρών υπόσχεται ο Βρετανός πρωθυπουργός</p>
-          <a href="#" class="stretched-link">Διαβάστε περισσότερα</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-          <img src="images/boris.jpg" class="cropped" width="200" height="250" alt="boris">
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Αθλητισμός</strong>
-          <h3 class="mb-0">Μπασκόνια</h3>
-          <div class="mb-1 text-muted">Ιουλ 11</div>
-          <p class="mb-auto">Μπαρτσελόνα - Μπασκόνια: Μετά από δέκα χρόνια οι Βάσκοι επέστρεψαν στην κορυφή του ισπανικού πρωτα...</p>
-          <a href="#" class="stretched-link">Διαβάστε περισσότερα</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-          <img src="images/nba.jpg" class="cropped" width="200" height="250" alt="nba">
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8 blog-main">
-      <h3 class="pb-4 mb-4 font-italic border-bottom">
-        Τελευταία Νέα
-      </h3>
 
       <!-- arthro -->
       <div class="blog-post">
-        <h2 class="blog-post-title">Πέθανε ο Αλέφαντος</h2>
+        <h2 class="blog-post-title">Το αεροδρόμιο στη Σαουδική Αραβία με την εντυπωσιακή ψευδαίσθηση</h2>
         <p class="blog-post-meta">30 Ιουνίου, 2020 by <a href="#">Ntinos</a></p>
 
-        <img src="images/alefantos.jpg" alt="alefantos">
+        <img src="images/saudi.jpg" alt="alefantos">
 
-        <p>Ο Νίκος Αλέφαντος ήταν πρώην ποδοσφαιριστής και πρώην προπονητής ποδοσφαίρου.</p>
+        <p>Το αεροδρόμιο θα εξυπηρετήσει το νέο υπερπολυτελές θέρετρο της Μέσης Ανατολής AMAALA, ένα τεράστιο συγκρότημα με απώτερο σκοπό την ευεξία και τη βιωσιμότητα και θα επεκτείνεται σε τρεις τοποθεσίες στις ακτές της Ερυθράς Θάλασσας.</p>
         <hr>
 
         <p>
-          Ο Νίκος Αλέφαντος ήτανΈλληνας προπονητής ποδοσφαίρου. Γεννήθηκε στις 3 Ιανουαρίου 1939 στην Αθήνα και από το 1956 ξεκίνησε την ενασχόλησή του με το ποδόσφαιρο, αρχικά ως ποδοσφαιριστής και στη συνέχεια ως προπονητής. Η καριέρα του άρχισε από τον Αστέρα Εξαρχείων και συνεχίστηκε στον ΑΟ Χαλανδρίου, στον Π.Α.Ο. Ρουφ, στον Ολυμπιακό Πειραιώς, στον Ατρόμητο Πειραιώς, στον Ολυμπιακό Χαλκίδας, στον Παναιγιάλειο, στον Πανελευσινιακό και στο Βύζαντα, όπου τερμάτισε την καριέρα του στην Α΄ Εθνική το 1969.
+          Ένα σχέδιο για ένα πολυτελές νέο αεροδρόμιο που μοιάζει με ένα λαμπερό κάτοπτρο της ερήμου, παρουσιάστηκε ως μέρος του σχεδίου πολλών δισεκατομμυρίων της Σαουδικής Αραβίας για να ανακαλυφθεί εκ νέου ως σημαντικός διεθνής τουριστικός προορισμός.
+        </p>
+
+        <p>
+          Το αεροδρόμιο θα εξυπηρετήσει το νέο υπερπολυτελές θέρετρο της Μέσης Ανατολής AMAALA, ένα τεράστιο συγκρότημα με απώτερο σκοπό την ευεξία και τη βιωσιμότητα και θα επεκτείνεται σε τρεις τοποθεσίες στις ακτές της Ερυθράς Θάλασσας.
+        </p>
+
+        <p>
+          Το θέρετρο έχει προγραμματιστεί να ολοκληρωθεί το 2028, ενώ το νέο αεροδρόμιο αναμένεται να λειτουργήσει έως το 2023, για να συμπέσει με την έναρξη της πρώτης φάσης του θέρετρου.
+        </p>
+
+        <p>
+          «Δεδομένης της φύσης του προφίλ επισκεπτών της AMAALA, φαίνεται ότι ποσοστό περισσότερο από το 80% των επισκεπτών της θα φτάνουν αεροπορικώς» δήλωσε στο CNN ο επικεφαλής ανάπτυξης της AMAALA Carlos Wakim.
+
+Ο Wakim λέει πως το λόμπι μοιάζει σαν εκείνο ενός μεγάλου ξενοδοχείου και περιγράφει τον τερματικό σταθμό ως σημείο όπου οι άνθρωποι μπορούν να συναντηθούν, όπου «οι επιχειρήσεις και ο ελεύθερος χρόνος συνδυάζονται σε ένα περιβάλλον που δεν είναι αναγνωρίσιμο ως αεροδρόμιο, αλλά ως η αρχή και το τέλος μιας υπερπολυτέλειας σε μία εμπειρία ενός θερέτρου, που έχει δημιουργηθεί για μια συγκεκριμένη κοινότητα».
         </p>
         
       </div><!-- /.arthro -->
