--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="ΡΕΠΟΡΤΕΡ10" />
     <meta property="og:description"        content="Ο έγκυρος ρεπόρτερ" />
-    <meta property="og:image"              content="https://ioncon391.github.io/logo.jpg" />
+    <meta property="og:image"              content="https://ioncon391.github.io/logo-new.jpg" />
 
     <!-- Bootstrap core CSS -->
 <link href="bootstrap.css" rel="stylesheet">
