--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Ο έγκυρος ρεπόρτερ</title>
 
     <meta property="og:url" content="https://ioncon391.github.io/" />
-    <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="ΡΕΠΟΡΤΕΡ10" />
-    <meta property="og:description"        content="Ο έγκυρος ρεπόρτερ" />
-    <meta property="og:image"              content="https://ioncon391.github.io/logo-new.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ΡΕΠΟΡΤΕΡ10" />
+    <meta property="og:description" content="Ο έγκυρος ρεπόρτερ" />
+    <meta property="og:image:secure_url" content="https://ioncon391.github.io/logo-mics.png" />
 
     <!-- Bootstrap core CSS -->
 <link href="bootstrap.css" rel="stylesheet">
