--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <h3 class="mb-0">Featured post</h3>
           <div class="mb-1 text-muted">Ιουν 30</div>
           <p class="card-text mb-auto">Μπόρις Τζόνσον: New deal 5 δισ. λιρών υπόσχεται ο Βρετανός πρωθυπουργός</p>
-          <a href="#" class="stretched-link">Διαβάστε περισσότερα</a>
+          <a href="politiki.html" class="stretched-link">Διαβάστε περισσότερα</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
@@ -116,7 +116,7 @@
           <h3 class="mb-0">Μπασκόνια</h3>
           <div class="mb-1 text-muted">Ιουλ 11</div>
           <p class="mb-auto">Μπαρτσελόνα - Μπασκόνια: Μετά από δέκα χρόνια οι Βάσκοι επέστρεψαν στην κορυφή του ισπανικού πρωτα...</p>
-          <a href="#" class="stretched-link">Διαβάστε περισσότερα</a>
+          <a href="athlitika.html" class="stretched-link">Διαβάστε περισσότερα</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
